--- a/static/scss/components/_navbar.scss
+++ b/static/scss/components/_navbar.scss
@@ -66,10 +66,15 @@ $nav-toggle-z-index: 2;
 .toggle-header{
   position: fixed;
   height: 50px;
-  width: 100%;
+  width: 100vw;
   background-color: $gray;
+  top: 0;
+  bottom: 0;
   z-index: 99;
   text-align: initial;
+  @media #{$breakpoint-min-md}{
+    background-color: transparent;
+}
 }
 
 .nav-toggle {
@@ -79,7 +84,7 @@ $nav-toggle-z-index: 2;
   cursor: pointer;
   height: 2rem;
   right: 2rem;
-  position: fixed;
+  position: absolute;
   top: .8rem;
   width: 2.4rem;
   z-index: 2;
