--- a/static/scss/pages/_home.scss
+++ b/static/scss/pages/_home.scss
@@ -119,7 +119,7 @@
 .home-coaching{
     
     display: grid;
-    grid-template-rows: repeat(2 auto); 
+    grid-template-rows: repeat(2, auto); 
     grid-template-columns: 65vw;
     grid-row-gap: 3em;
     text-align: center;
